- Removed xml-style reactive script parser - Removed tipi flickr integration - Refactored FunctionInterface and Operand mechanics.